force-app/main/default/objects/Project__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>