force-app/main/default/objects/Project__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>TEXT( Application__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the status of the application related to this project.</inlineHelpText>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>