force-app/main/default/objects/Project__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <type>TextArea</type>
</CustomField>