force-app/main/default/objects/Project__c/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <inlineHelpText>Award amount as reserved and set at the start of the contract period.</inlineHelpText>
    <label>Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>