force-app/main/default/objects/Project__c/fields/Award_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Award_Recommendation__c</fullName>
    <label>Award Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Funding</fullName>
            </value>
            <value>
                <fullName>Partial Funding</fullName>
            </value>
            <value>
                <fullName>No Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>