force-app/main/default/objects/Project__c/fields/Board_of_E_A__c.field-meta.xml
<CustomField>
    <fullName>Board_of_E_A__c</fullName>
    <inlineHelpText>Defined on the Project Record</inlineHelpText>
    <label>Board of E&amp;A</label>
    <type>Date</type>
</CustomField>