force-app/main/default/objects/Project__c/fields/CDA_App_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>CDA_App_Review_Status__c</fullName>
    <formula>TEXT( Application__r.CDA_Review_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDA App Review Status</label>
    <type>Text</type>
</CustomField>