force-app/main/default/objects/Project__c/fields/Construction_Costs__c.field-meta.xml
<CustomField>
    <fullName>Construction_Costs__c</fullName>
    <label>Construction Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>