force-app/main/default/objects/Project__c/fields/Construction_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_End_Date__c</fullName>
    <label>Construction End Date</label>
    <type>Date</type>
</CustomField>