force-app/main/default/objects/Project__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the account for the general contractor on this project.</inlineHelpText>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Contractor of)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>