force-app/main/default/objects/Project__c/fields/E_A_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>E_A_Approval_Date__c</fullName>
    <label>E&amp;A Approval Date</label>
    <type>Date</type>
</CustomField>