force-app/main/default/objects/Project__c/fields/E_A_Status__c.field-meta.xml
<CustomField>
    <fullName>E_A_Status__c</fullName>
    <label>E&amp;A Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Prepping Docs</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>