force-app/main/default/objects/Project__c/fields/ER_Status__c.field-meta.xml
<CustomField>
    <fullName>ER_Status__c</fullName>
    <label>ER Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Competed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>