force-app/main/default/objects/Project__c/fields/Final_Notice_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_of_Approval__c</fullName>
    <label>Final Notice of Approval</label>
    <type>Date</type>
</CustomField>