force-app/main/default/objects/Project__c/fields/Final_Report_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Final_Report_Submitted__c</fullName>
    <label>Final Report Submitted</label>
    <type>Date</type>
</CustomField>