force-app/main/default/objects/Project__c/fields/GrantMonitor__c.field-meta.xml
<CustomField>
    <fullName>GrantMonitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Monitor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>