force-app/main/default/objects/Project__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <inlineHelpText>Defined on the Project Record</inlineHelpText>
    <label>Project Number</label>
    <length>65</length>
    <type>Text</type>
</CustomField>