force-app/main/default/objects/Project__c/fields/Reference_Application__c.field-meta.xml
<CustomField>
    <fullName>Reference_Application__c</fullName>
    <formula>Application__r.Application_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Application</label>
    <type>Text</type>
</CustomField>