force-app/main/default/objects/Project__c/fields/Section_3_Plan__c.field-meta.xml
<CustomField>
    <fullName>Section_3_Plan__c</fullName>
    <label>Section 3 Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>