force-app/main/default/objects/Project__c/fields/TotalSqFt__c.field-meta.xml
<CustomField>
    <fullName>TotalSqFt__c</fullName>
    <label>Total Sq. Ft.</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>