force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Status__c</columns>
    <columns>Application__c</columns>
    <columns>Developer__c</columns>
    <columns>Award_Recommendation__c</columns>
    <columns>Award_Amount__c</columns>
    <columns>GrantMonitor__c</columns>
    <columns>Analyst__c</columns>
    <columns>Reference_Application__c</columns>
    <columns>Account__c</columns>
    <columns>CDA_App_Review_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All</label>
</ListView>